--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "ReTwitterify",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Turns X back to Twitter.",
     "author": "Xenoreaper",
     "icons": {
@@ -10,7 +10,8 @@
     "content_scripts": [
         {
             "matches": [
-                "*://*.twitter.com/*"
+                "*://*.twitter.com/*",
+                "*://*.x.com/*"
             ],
             "js": [
                 "retwitterify.js"
