--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "ReTwitterify",
-    "version": "1.1.1",
+    "version": "1.2",
     "description": "Turns X back to Twitter.",
     "author": "Xenoreaper",
     "icons": {
@@ -17,5 +17,8 @@
                 "retwitterify.js"
             ]
         }
-    ]
+    ],
+    "options_ui": {
+        "page": "options.html"
+    }
 }
